<resources>
    <string name="app_name">My Trip Planner</string>
    <string name="next">NEXT</string>
    <string name="guide">Voice Guide</string>
    <string name="name">NAME</string>
    <string name="home">Home</string>
    <string name="destination">Destination</string>
    <string name="result">Your Trip</string>
    <string name="passenger">Passenger</string>
    <string name="adult">Adult</string>
    <string name="children">Children</string>
    <string name="person_info">Personal Info</string>
    <string name="flight_info">Flight Info</string>
    <string name="live_info">Live information of flight</string>
    <string name="content_provider">Airport List</string>

    <string name="departure">Departure</string>
    <string name="iv_perinfo">image for the first screen</string>
    <string name="et_autofillhints">e.g. Jeffrey Smith</string>

    <string name="London">London</string>
    <string name="Ottawa">Ottawa</string>
    <string name="Toronto">Toronto</string>
    <string name="Vancouver">Vancouver</string>
    <string name="Waterloo">Waterloo</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="to">To:</string>
    <string name="child">Child</string>
    <string name="from">From :</string>
    <string name="confirm">CONFIRM</string>
    <string name="oneway_trip">One-Way Trip</string>
    <string name="round_trip">Round Trip</string>
    <string name="live_btn">Live information</string>
    <string name="photo_btn">Your Memory</string>
    <string name="stop_bgm">STOP BGM</string>
    <string name="start_bgm">START BGM</string>
    <string name="appwidget_text">Trip Planner</string>
    <string name="add_widget">Trip Planner</string>
    <string name="refresh">Refresh</string>
    <string name="ourLocation">Our Location</string>
    <string name="contact"> Contact Us</string>
    <string name="title_activity_maps">Map</string>

    <string name="new_airport_detail">Airport Information</string>
    <string name="new_airport_name">Airport Name</string>
    <string name="add_airport">Add Airport</string>
    <string name="show_airport">Load Airport</string>
        <!-- Permissions  -->
    <string name="current_location">Current Location</string>
    <string name="permission_rationale_location">Access to the location service is required to show your current location on the map.</string>
    <string name="location_permission_denied">This service requires location permission. Please try again and grant access to use the location.</string>
    <string name="permission_required_toast">Location permission is required for this service.</string>
</resources>
