<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:textColor="#009933"
        android:gravity="center"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_below="@+id/txt_name"/>


    <ListView
        android:id="@+id/list_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/SpinnerDivideStyle"
        android:layout_below="@+id/title"
        android:layout_above="@+id/rg_tripType"/>

    <RadioGroup
        android:id="@+id/rg_tripType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_above="@+id/lb_departure">

        <RadioButton
            android:id="@+id/rb_oneway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/oneway_trip" />

        <RadioButton
            android:id="@+id/rb_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_trip" />
    </RadioGroup>



    <TextView
        android:id="@+id/lb_departure"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="#009933"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="200dp"
        android:layout_above="@+id/people"/>

    <TextView
        android:id="@+id/txt_departure"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/people"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/lb_departure"
        android:layout_toRightOf="@+id/lb_departure"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/arrow"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:text="@string/arrow"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/txt_departure"
        android:layout_toRightOf="@+id/txt_departure"
        android:textSize="20sp"
        android:layout_above="@+id/people"/>

    <TextView
        android:id="@+id/lb_destination"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textColor="#009933"
        android:text="@string/to"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/arrow"
        android:layout_toRightOf="@+id/arrow"
        android:layout_above="@+id/people"/>

    <TextView
        android:id="@+id/txt_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/lb_destination"
        android:layout_toRightOf="@+id/lb_destination"
        android:layout_above="@+id/people"/>


    <LinearLayout
        android:id="@+id/people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/btn_confirm">

        <TextView
            android:id="@+id/txt_adult"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/adult"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sp_adult"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:theme="@style/SpinnerDivideStyle" />

        <TextView
            android:id="@+id/txt_child"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/child"
            android:textSize="20sp" />
        <Spinner
            android:id="@+id/sp_child"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:theme="@style/SpinnerDivideStyle"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginBottom="0dp"
        android:text="@string/confirm"
        android:layout_alignParentEnd="true" />

</RelativeLayout>