<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_airport_detail"
        android:textColor="#009933"
        android:gravity="center"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/txtbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="90dp"
        android:text="@string/new_airport_name" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:ems="10"
        android:layout_below="@+id/txtbox"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAdd"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_airport"
        android:layout_below="@+id/txtName"/>

    <Button
        android:id="@+id/btnRetrieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:onClick="onClickShow"
        android:text="@string/show_airport"
        android:layout_below="@+id/btnAdd"/>

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_toEndOf="@+id/btnAdd"
        android:layout_toRightOf="@+id/btnAdd"
        android:onClick="onClickHome"
        android:text="@string/home"
        android:layout_below="@+id/txtName"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRetrieve"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:textSize="20sp"
            />
    </ScrollView>

</RelativeLayout>