<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FlightInfoActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="40sp">
    </TextView>

<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_below="@+id/textView1"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="TextView2"-->
<!--        android:layout_centerHorizontal="true">-->
<!--    </TextView>-->

    <Button
        android:id="@+id/btn_flight"
        android:text="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

    </Button>

    <Button
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginEnd="-245dp"
        android:layout_marginRight="-245dp"
        android:layout_toStartOf="@+id/btn_flight"
        android:layout_toLeftOf="@+id/btn_flight"
        android:layout_toEndOf="@+id/btn_flight"
        android:layout_toRightOf="@+id/btn_flight"
        android:text="@string/contact"/>

    <Button
        android:id="@+id/btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_toStartOf="@+id/btn_flight"
        android:layout_toLeftOf="@+id/btn_flight"
        android:text="@string/ourLocation"/>

    <ListView
        android:id="@+id/list_schedule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip"
        android:layout_marginBottom="2dip"
        android:drawSelectorOnTop="false"
        android:visibility="visible"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/btn_map" />
</RelativeLayout>